OPORTO nagchage sa layout and done na posting

--- a/app/src/main/res/layout/activity_donation_campaign_status_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_status_page.xml
@@ -86,7 +86,8 @@
                 android:layout_marginTop="10dp"
                 android:background="@android:color/transparent"
                 android:clickable="false"
-                android:scaleType="centerCrop"></ImageView>
+                android:scaleType="centerCrop"
+                android:elevation="8dp"></ImageView>
 
             <TextView
                 android:id="@+id/titleTextView"
@@ -109,8 +110,9 @@
                 android:layout_below="@+id/titleTextView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
-                android:background="#ECECEC"
-                android:textAlignment="center"></ImageView>
+                android:background="@drawable/bg_radius_ten_gray"
+                android:textAlignment="center"
+                android:elevation="8dp"></ImageView>
 
             <TextView
                 android:id="@+id/descTextView"
@@ -120,7 +122,8 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="20dp"
                 android:text="Description"
-                android:textColor="@color/black">
+                android:textColor="@color/black"
+                android:elevation="8dp">
 
             </TextView>
 
@@ -145,7 +148,8 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@+id/amountDonatedLabel"
-                android:background="#ECECEC"></ImageView>
+                android:background="@drawable/bg_radius_ten_gray"
+                android:elevation="8dp"></ImageView>
 
             <TextView
                 android:id="@+id/currencyTag1"
@@ -156,7 +160,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/amountDonatedLabel"
                 android:text="₱"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/currentAmountTextView"
@@ -167,7 +172,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/currencyTag1"
                 android:text="0"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/slash"
@@ -178,7 +184,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/currentAmountTextView"
                 android:text="/"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/currencyTag2"
@@ -189,7 +196,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/slash"
                 android:text="₱"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/amountNeededTextView"
@@ -200,7 +208,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/currencyTag2"
                 android:text="0"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
 
             <TextView
@@ -224,8 +233,9 @@
                 android:layout_below="@+id/txtPeopleWhoDonated"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:background="#ECECEC"
-                android:textAlignment="center"></ImageView>
+                android:background="@drawable/bg_radius_ten_gray"
+                android:textAlignment="center"
+                android:elevation="8dp"></ImageView>
 
             <ListView
                 android:id="@+id/listViewOfPeopleDonated"
@@ -234,7 +244,8 @@
                 android:layout_below="@+id/txtPeopleWhoDonated"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="15dp"
-                android:textSize="10sp">
+                android:textSize="10sp"
+                android:elevation="8dp">
 
             </ListView>
 
@@ -259,7 +270,8 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@+id/numOfPeopleDonatedLabel"
-                android:background="#ECECEC"></ImageView>
+                android:background="@drawable/bg_radius_ten_gray"
+                android:elevation="8dp"></ImageView>
 
 
             <TextView
@@ -271,7 +283,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/numOfPeopleDonatedLabel"
                 android:text="0"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="8dp"></TextView>
 
 
 
@@ -281,12 +294,13 @@
             <ImageView
                 android:id="@+id/contentSummary"
                 android:layout_width="385dp"
-                android:layout_height="130dp"
+                android:layout_height="115dp"
                 android:layout_below="@+id/contactSummary"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:textAlignment="center"></ImageView>
+                android:textAlignment="center"
+                android:elevation="8dp"></ImageView>
 
             <TextView
                 android:id="@+id/contactSummary"
@@ -298,7 +312,8 @@
                 android:text="CONTACT INFORMATION"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="20dp"></TextView>
+                android:textSize="20dp"
+                android:elevation="8dp"></TextView>
 
 
             <TextView
@@ -310,19 +325,19 @@
                 android:layout_marginTop="15dp"
                 android:text="Full Name: "
                 android:textColor="#6F6F6F"
-                android:textSize="18sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/fullNameTextView"
                 android:layout_width="265dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/contactSummary"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="15dp"
                 android:layout_toEndOf="@+id/fullNameLabel"
                 android:text="Creator Name"
                 android:textColor="@color/black"
-                android:textSize="15sp"></TextView>
+                android:elevation="8dp"></TextView>
 
 
             <TextView
@@ -334,19 +349,21 @@
                 android:layout_marginTop="5dp"
                 android:text="Email: "
                 android:textColor="#6F6F6F"
-                android:textSize="18sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/emailTextView"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/fullNameTextView"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/emailLabel"
                 android:text="Insert Email"
                 android:textColor="@color/black"
-                android:textSize="15sp"></TextView>
+                android:elevation="8dp">
+
+            </TextView>
 
             <TextView
                 android:id="@+id/phoneNumberLabel"
@@ -357,19 +374,19 @@
                 android:layout_marginTop="5dp"
                 android:text="Phone Number: "
                 android:textColor="#6F6F6F"
-                android:textSize="18sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/phoneNumberTextView"
                 android:layout_width="228dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/emailTextView"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/phoneNumberLabel"
                 android:text="Insert Phone Number"
                 android:textColor="@color/black"
-                android:textSize="15sp"></TextView>
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodLabel"
@@ -380,19 +397,19 @@
                 android:layout_marginTop="5dp"
                 android:text="Preferred Contact Method: "
                 android:textColor="#6F6F6F"
-                android:textSize="18sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="8dp"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodTextView"
                 android:layout_width="140dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/phoneNumberTextView"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/contactMethodLabel"
                 android:text="Insert Preferred"
                 android:textColor="@color/black"
-                android:textSize="15sp"></TextView>
+                android:elevation="8dp"></TextView>
 
             <View
                 android:layout_width="match_parent"
