OPORTO goods summary page

--- a/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
@@ -61,7 +61,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp">
 
     <TextView
         android:id="@+id/Donation"
@@ -85,7 +87,8 @@
                 android:layout_marginTop="10dp"
                 android:background="@android:color/transparent"
                 android:clickable="false"
-                android:scaleType="centerCrop"></ImageView>
+                android:scaleType="centerCrop"
+                android:elevation="5dp"></ImageView>
 
             <ImageView
                 android:id="@+id/contentSummary"
@@ -95,6 +98,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/bg_radius_ten_gray"
+                android:elevation="5dp"
                 android:textAlignment="center"></ImageView>
 
     <TextView
@@ -327,7 +331,8 @@
                 android:text="Post Now"
                 android:textColor="@color/white"
                 android:textSize="17sp"
-                android:textStyle="bold"></Button>
+                android:textStyle="bold"
+                android:elevation="8dp"></Button>
 
         </RelativeLayout>
     </ScrollView>
