--- a/app/src/main/res/layout/activity_donation_campaign_status_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_status_page.xml
@@ -62,7 +62,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
 
             <TextView
@@ -86,8 +88,8 @@
                 android:layout_marginTop="10dp"
                 android:background="@android:color/transparent"
                 android:clickable="false"
-                android:scaleType="centerCrop"
-                android:elevation="8dp"></ImageView>
+                android:elevation="5dp"
+                android:scaleType="centerCrop"></ImageView>
 
             <TextView
                 android:id="@+id/titleTextView"
@@ -96,6 +98,7 @@
                 android:layout_below="@+id/campaignImageView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
+                android:elevation="3dp"
                 android:text="Title"
                 android:textColor="@color/black"
                 android:textSize="25sp"
@@ -110,20 +113,22 @@
                 android:layout_below="@+id/titleTextView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:textAlignment="center"
-                android:elevation="8dp"></ImageView>
+                android:elevation="3dp"
+                android:textAlignment="center"></ImageView>
 
             <TextView
                 android:id="@+id/descTextView"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/titleTextView"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
                 android:text="Description"
-                android:textColor="@color/black"
-                android:elevation="8dp">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -133,7 +138,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/bg1Status"
                 android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:text="Amount Donated: "
                 android:textColor="@color/black"
                 android:textStyle="bold">
@@ -147,9 +151,10 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/amountDonatedLabel"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:elevation="8dp"></ImageView>
+                android:elevation="3dp"></ImageView>
 
             <TextView
                 android:id="@+id/currencyTag1"
@@ -158,10 +163,11 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/amountDonatedLabel"
+                android:elevation="3dp"
                 android:text="₱"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <TextView
                 android:id="@+id/currentAmountTextView"
@@ -170,10 +176,11 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/currencyTag1"
+                android:elevation="3dp"
                 android:text="0"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <TextView
                 android:id="@+id/slash"
@@ -182,10 +189,11 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/currentAmountTextView"
+                android:elevation="3dp"
                 android:text="/"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <TextView
                 android:id="@+id/currencyTag2"
@@ -194,10 +202,11 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/slash"
+                android:elevation="3dp"
                 android:text="₱"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <TextView
                 android:id="@+id/amountNeededTextView"
@@ -206,10 +215,11 @@
                 android:layout_below="@id/bg1Status"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/currencyTag2"
+                android:elevation="3dp"
                 android:text="0"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
 
             <TextView
@@ -218,7 +228,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/amountDonatedLabel"
                 android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:text="People who Donated: "
                 android:textColor="@color/black"
                 android:textStyle="bold">
@@ -233,9 +242,10 @@
                 android:layout_below="@+id/txtPeopleWhoDonated"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:textAlignment="center"
-                android:elevation="8dp"></ImageView>
+                android:elevation="3dp"
+                android:textAlignment="center"></ImageView>
 
             <ListView
                 android:id="@+id/listViewOfPeopleDonated"
@@ -244,8 +254,9 @@
                 android:layout_below="@+id/txtPeopleWhoDonated"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="15dp"
-                android:textSize="10sp"
-                android:elevation="8dp">
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
+                android:textSize="10sp">
 
             </ListView>
 
@@ -255,7 +266,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/bgPeopleDonated"
                 android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:text="Number of people donated: "
                 android:textColor="@color/black"
                 android:textStyle="bold">
@@ -269,9 +279,10 @@
                 android:layout_below="@id/bgPeopleDonated"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/numOfPeopleDonatedLabel"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:elevation="8dp"></ImageView>
+                android:elevation="3dp"></ImageView>
 
 
             <TextView
@@ -281,12 +292,11 @@
                 android:layout_below="@id/bgPeopleDonated"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@+id/numOfPeopleDonatedLabel"
+                android:elevation="3dp"
                 android:text="0"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
-
-
+                android:textColor="@color/black"></TextView>
 
 
             <!--    Contact Information-->
@@ -294,26 +304,27 @@
             <ImageView
                 android:id="@+id/contentSummary"
                 android:layout_width="385dp"
-                android:layout_height="115dp"
+                android:layout_height="125dp"
                 android:layout_below="@+id/contactSummary"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:textAlignment="center"
-                android:elevation="8dp"></ImageView>
+                android:elevation="3dp"
+                android:textAlignment="center"></ImageView>
 
             <TextView
                 android:id="@+id/contactSummary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/numPeopleDonated"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="8dp"
                 android:text="CONTACT INFORMATION"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:elevation="8dp"></TextView>
+                android:textSize="15dp"
+                android:textStyle="bold"></TextView>
 
 
             <TextView
@@ -321,12 +332,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/contactSummary"
-                android:layout_marginLeft="28dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
                 android:text="Full Name: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"
-                android:elevation="8dp"></TextView>
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:id="@+id/fullNameTextView"
@@ -334,10 +346,11 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/contactSummary"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@+id/fullNameLabel"
+                android:elevation="3dp"
                 android:text="Creator Name"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
 
             <TextView
@@ -345,12 +358,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/fullNameLabel"
-                android:layout_marginLeft="28dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
                 android:text="Email: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"
-                android:elevation="8dp"></TextView>
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:id="@+id/emailTextView"
@@ -358,10 +372,11 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/fullNameTextView"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@+id/emailLabel"
+                android:elevation="3dp"
                 android:text="Insert Email"
-                android:textColor="@color/black"
-                android:elevation="8dp">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -370,12 +385,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/emailLabel"
-                android:layout_marginLeft="28dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
                 android:text="Phone Number: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"
-                android:elevation="8dp"></TextView>
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:id="@+id/phoneNumberTextView"
@@ -383,22 +399,24 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/emailTextView"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@+id/phoneNumberLabel"
+                android:elevation="3dp"
                 android:text="Insert Phone Number"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/phoneNumberLabel"
-                android:layout_marginLeft="28dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
                 android:text="Preferred Contact Method: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"
-                android:elevation="8dp"></TextView>
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodTextView"
@@ -406,10 +424,11 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/phoneNumberTextView"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@+id/contactMethodLabel"
+                android:elevation="3dp"
                 android:text="Insert Preferred"
-                android:textColor="@color/black"
-                android:elevation="8dp"></TextView>
+                android:textColor="@color/black"></TextView>
 
             <View
                 android:layout_width="match_parent"
