--- a/app/src/main/res/layout/activity_donation_campaign_selection_item.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_selection_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/campaignItemRelativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
     <TextView
         android:id="@+id/campaignTitleTextView"
         android:layout_width="match_parent"
@@ -27,19 +29,21 @@
             android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
             android:clickable="false"
-            android:src="@drawable/unspecialized_createpost_image" />
+            android:src="@drawable/unspecialized_createpost_image"
+            android:layout_marginBottom="30dp"
+            android:scaleType="centerCrop"/>
 
         <Button
             android:id="@+id/viewDetailsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="40dp"
             android:layout_toRightOf="@id/campaignImageView"
+            android:background="@android:color/transparent"
             android:clickable="true"
             android:text="View Details"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            android:background="@android:color/transparent"/>
+            android:textSize="15sp" />
     </RelativeLayout>
 </RelativeLayout>
