--- a/app/src/main/res/layout/activity_donation_campaign_selection_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_selection_page.xml
@@ -58,11 +58,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="70dp"
             android:clipToPadding="false"
-            android:divider="@null"
-            android:dividerHeight="0dp"
+           android:divider="@color/black"
+            android:dividerHeight="2dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            tools:listitem="@layout/activity_donation_campaign_selection_item" />
+
+            tools:listitem="@layout/activity_donation_campaign_selection_item"
+            />
 
 </RelativeLayout>
 
