--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".RegistrationActivity">
 
 
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/backTop"
             android:layout_width="match_parent"
@@ -20,15 +22,19 @@
             android:layout_marginTop="18dp"
             android:layout_marginRight="25dp"
             android:layout_weight="4"
-            android:background="#FFFFFF"
+            android:background="@color/white"
             android:scaleType="fitCenter"
-            android:src="@drawable/back1">
-        </ImageButton>
+            android:src="@drawable/back1"></ImageButton>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
+
+
+
+
     <RelativeLayout
         android:id="@+id/registrationImgRelativeLayout"
         android:layout_width="340dp"
@@ -37,7 +43,7 @@
         android:orientation="horizontal"
         android:background="@drawable/grey_rounded_corner"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="70dp">
 
         <ImageView
             android:id="@+id/img1"
@@ -66,72 +72,80 @@
             android:text="Join today to make a difference in \nyour community!"
             android:textSize="16dp"/>
     </RelativeLayout>
+
+
+
+
     <LinearLayout
         android:id="@+id/emailLinearLayout"
         android:layout_below="@id/registrationImgRelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/bg_radius_ten_gray"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="50dp">
+        android:layout_marginHorizontal="50dp"
+        android:orientation="vertical">
+
         <EditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:hint="Email"
             android:layout_marginHorizontal="15dp"
             android:paddingLeft="20dp"
-            android:inputType="textEmailAddress"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/passwordLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/emailLinearLayout"
-        android:background="@drawable/bg_radius_ten_gray"
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="50dp">
+            android:inputType="textEmailAddress"
+            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_login_white_radius"
+            android:elevation="5dp"/>
+
+
         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:hint="Password"
             android:layout_marginHorizontal="15dp"
             android:inputType="textPassword"
-            android:paddingLeft="20dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/confirmPasswordLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/passwordLinearLayout"
-        android:background="@drawable/bg_radius_ten_gray"
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="50dp">
+            android:paddingLeft="20dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_login_white_radius"
+            android:elevation="5dp"/>
+
         <EditText
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:hint="Confirm Password"
             android:layout_marginHorizontal="15dp"
             android:inputType="textPassword"
             android:layout_marginLeft="15dp"
-            android:paddingLeft="20dp"/>
+            android:paddingLeft="20dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_login_white_radius"
+            android:elevation="5dp"/>
+
+
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/createAccountButton"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/confirmPasswordLinearLayout"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
-        <Button
-            android:id="@+id/createAccountButton"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Create Account"
-            android:background="@drawable/rounded_corner"
-            android:textColor="@color/white" />
-    </LinearLayout>
+        android:layout_below="@+id/emailLinearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_corner"
+        android:text="Create Account"
+        android:textColor="@color/white"
+        android:elevation="10dp">
+
+    </Button>
+
+
+
 
 
 </RelativeLayout>
