--- a/app/src/main/res/drawable/bg_radius_ten_lightblue.xml
+++ b/app/src/main/res/drawable/bg_radius_ten_lightblue.xml
@@ -6,6 +6,8 @@
         android:color="#98C1FF" />
     <corners
         android:radius="10dp"/>
+    <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp" />
+    <stroke android:color="@color/white" android:width="1dp" />
 
 
 </shape>
